# arkley

./: .gitignore  Cargo.toml  README.md  lib.rs  package-lock.json
.devcontainer/: devcontainer.json  reactnative.sh
.github/: labeler.yml
.github/workflows/: apisec-scan.yml
____create_newfolder/arkley_describe/: Cargo.toml
____create_newfolder/arkley_describe/src/: filter.rs
____create_newfolder/quadratics/: interger.rs  mod.rs  solution.rs
____create_newfolder/quadratics/rearrange/: try_make_subject.rs
arkley-describe/: Cargo.toml
arkley-numerics/: Cargo.toml  README.md
arkley-numerics/src/: lib.rs  numeric.rs
arkley_algebra/: Cargo.toml  README.md  RESOURCES.md  TODO.md  expr.rs  expression.rs  manipulation.rs  operation.rs  term.rs
arkley_algebra/manipulation/: eval.rs  replace_vars.rs  var_op.rs
arkley_algebra/manipulation/replace_variables/: mod.rs  term.rs
arkley_algebra/manipulation/simplify/: mod.rs
arkley_algebra/manipulation/simplify/expr/: remove_unnecessary_parentheses.rs
arkley_algebra/parser/: expression.rs  mod.rs
arkley_algebra/src/: expression.rs  lib.rs  manipulation.rs  operation.rs  term.rs  variable.rs
arkley_algebra/src/arithmetics/: add.rs  combiner.rs  common.rs  describe.rs  div.rs  expression.rs  macro_gen.rs  mod.rs  mul.rs  neg.rs  pow.rs  sub.rs  term.rs
arkley_algebra/src/core/: custom.rs  expression.rs  function.rs  label.rs  mod.rs  op.rs  term.rs  variable.rs  variables.rs
arkley_algebra/src/equation/: error.rs  make_subject.rs  mod.rs  rearrange.rs  relation.rs  utils.rs
arkley_algebra/src/equation/rearrange/: error.rs  mod.rs  try_make_subject.rs  utils.rs
arkley_algebra/src/function/: mod.rs
arkley_algebra/src/manipulation/: eval.rs  mod.rs  polynomial.rs  replace_vars.rs  utils.rs  with_value.rs
arkley_algebra/src/manipulation/evaluation/: describe.rs  equation.rs  expression.rs  function.rs  gen.rs  inner.rs  mod.rs
arkley_algebra/src/manipulation/simplification/: expression.rs  mod.rs  remove_unnecessary_parentheses.rs
arkley_algebra/src/manipulation/simplify/: expression.rs  mod.rs  remove_unnecessary_parentheses.rs
arkley_algebra/src/manipulation/variable_analysis/: equation.rs  expression.rs  mod.rs  term.rs
arkley_algebra/src/manipulation/variable_substitution/: describe.rs  equation.rs  expression.rs  function.rs  gen.rs  mod.rs  replace_variables.rs  term.rs
arkley_algebra/src/parser/: context.rs  equation.rs  expression.rs  function.rs  mod.rs  op.rs  term.rs  token.rs  tokens.rs  variable.rs
arkley_algebra/src/quadratics/: TODO.md  axis_symmetry.rs  concavity.rs  discriminant.rs  error.rs  interger.rs  mod.rs  product.rs  roots.rs  sum.rs
arkley_algebra/src/simplify/expr/: mod.rs
arkley_algebra/translations/de/: main.ftl
arkley_algebra/translations/en-US/: main.ftl
arkley_cli/: Cargo.toml  README.md
arkley_cli/delete/: commands.rs  main.rs  playground.rs  utils.rs
arkley_cli/src/: command.rs  commands.rs  main.rs  playground.rs  pretty_errors.rs  utils.rs
arkley_describe/: Cargo.toml  README.md  describe.rs  lang.rs  operations.rs  utils.rs
arkley_describe/src/: build.rs  describe.rs  filter.rs  lib.rs  method.rs  operations.rs  step.rs  substep.rs  utils.rs
arkley_numerics/: Cargo.toml  README.md  decimal.rs  fraction.rs  standardform.rs
arkley_numerics/src/: decimal.rs  describe.rs  errors.rs  fraction.rs  lib.rs  number.rs  numeric.rs  standardform.rs
arkley_parser/src/: numbers.rs
arkley_traits/: Cargo.toml  README.md
arkley_traits/src/: core.rs  gcd.rs  lcm.rs  lib.rs  log.rs  numeric.rs  power.rs  zero.rs
arkley_ui/: App.tsx  README.md  app.json  package-lock.json  package.json
arkley_ui/src/components/: AppNavigator.tsx  Keyboard.tsx
arkley_ui/src/screens/: Calculator.tsx  ConversionCalculator.tsx
arkley_unit_convertor/: Cargo.toml  README.md
arkley_unit_convertor/src/: lib.rs
arkley_unit_convertor/tests/: time.rs
numbers/: fraction.rs
src/: lib.rs
src/describe/: filter.rs  mod.rs  numeric_describe.rs
src/numbers/: fraction.rs  mod.rs  standardform.rs
src/utils/: abs.rs  gcd.rs  lcm.rs  mod.rs  numeric.rs  power.rs  zero.rs
to_delete/: function.rs
to_delete/arkley_describe/to_delete/: describe.rs  utils.rs
utils/: gcd.rs  lcm.rs
