[package]
name = "arkley"
edition.workspace = true
readme.workspace = true
version.workspace = true
documentation = "https://docs.rs/arkley"
repository = "https://github.com/Deaths-Door/arkley"
authors.workspace = true
homepage.workspace = true
license.workspace = true

[workspace]
members = ["arkley_algebra"]

[workspace.package]
version = "0.0.2"
edition = "2021"
readme = "README.md"
authors = ["Aarav Shah <aaravaditya51@gmail.com>"]
homepage = "https://github.com/Deaths-Door/arkley"
license = "MIT OR Apache-2.0"