[package]
name = "arkley"
edition.workspace = true
readme.workspace = true
version.workspace = true
documentation = "https://docs.rs/arkley"
repository = "https://github.com/Deaths-Door/arkley"
authors.workspace = true
homepage.workspace = true
license.workspace = true

[features]
default = ["algebra"]
algebra = ["arkley_algebra/full"]
units = ["arkley_unit_convertor"]
describe = ["arkley_algebra/describe","arkley_describe"]

[dependencies]
arkley_algebra = { workspace = true , optional = true }
arkley_unit_convertor = { workspace = true , optional = true }
arkley_describe = { workspace = true , optional = true }

[workspace]
members = [
    "arkley_algebra",
    "arkley_describe",
    "arkley_unit_convertor",
    "arkley_cli"
]

[workspace.package]
version = "0.0.2"
edition = "2021"
readme = "README.md"
authors = ["Aarav Shah <aaravaditya51@gmail.com>"]
homepage = "https://github.com/Deaths-Door/arkley"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
arkley_algebra = { path = "../arkley/arkley_algebra" }
arkley_describe = { path = "../arkley/arkley_describe" }
arkley_unit_convertor = { path = "../arkley/arkley_unit_convertor" }
arkley_cli = { path = "../arkley/arkley_cli" }