[package]
name = "arkley_algebra"
documentation = "https://docs.rs/arkley_algebra"
repository = "https://github.com/Deaths-Door/arkley/tree/main/arkley_algebra"
version.workspace = true
edition.workspace = true
readme.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true

[features]
# TODO : Remove equation feature
default = ["parse","function"] 
parse = ["nom","num-notation/nom"]
equation = []
function = []

describe = ["arkley_describe"]

full = ["parse","equation","describe"]

[dependencies]
# For Number
num-notation = { version = "0.1.3" , features = ["num","hash"] }

# Cuz im lazy
strum = { version = "0.25", features = ["derive"] }
nom = { workspace = true , optional = true }

# For describe feature
arkley_describe = { workspace = true , optional = true }

[dev-dependencies]
concat-idents = "1.1.5"
