[package]
name = "arkley_algebra"
documentation = "https://docs.rs/arkley_algebra"
repository = "https://github.com/Deaths-Door/arkley/tree/main/arkley_algebra"
version.workspace = true
edition.workspace = true
readme.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true

[features]
default = ["parse","function"] 
parse = ["nom","lazy_static","num-notation/nom"]
equation = ["thiserror"]
function = []

describe = ["arkley_describe"]

full = ["parse","equation","describe"]

[dependencies]
# For Number
num-notation = { version = "0.1.3" , features = ["num","hash"] }

# Cuz im lazy
strum = { version = "0.25", features = ["derive"] }

# For parsing feature
nom = { version = "7.1.3" , optional = true }
lazy_static = { version = "1.4.0" , optional = true }

# For describe feature
arkley_describe = { workspace = true , optional = true }

# For RearrangeError so only equation uses it
thiserror = { version = "1.0.50", optional = true }

[dev-dependencies]
concat-idents = "1.1.5"
