[package]
name = "arkley_algebra"
documentation = "https://docs.rs/arkley_algebra"
repository = "https://github.com/Deaths-Door/arkley/tree/main/arkley_algebra"
version.workspace = true
edition.workspace = true
readme.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true

[features]
default = ["parse"] 
parse = ["nom","lazy_static","num-notation/nom"]
equation = ["thiserror"]

describe = ["arkley_describe"]

full = ["parse","equation","describe"]

[dependencies]
# General
itertools = "0.12.1"

# For Number
num-notation = { version = "0.1.3" , features = ["num","hash"] }

# For Custom Types
dyn-clone = "1.0.17"
dyn-eq = "0.1.3"

# As I'm lazy
strum = { version = "0.25", features = ["derive"] }

# For Parsing Feature
nom = { workspace = true , optional = true }


# For describe feature
arkley_describe = { workspace = true , optional = true }
lazy_static = { version = "1.4.0" , optional = true }

# For RearrangeError so only equation uses it
thiserror = { version = "1.0.50", optional = true }

[dev-dependencies]
concat-idents = "1.1.5"
test-case.workspace = true
nom-supreme.workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "../katex.html"]
