[package]
name = "arkley_describe"
version = "0.0.3"
edition = "2021"
readme = "README.md"
authors = ["Aarav Shah <aaravaditya51@gmail.com>"]
description = "This crate provides generators for human-readable explanations of complex mathematical operations"
documentation = "https://docs.rs/arkley_describe"
repository = "https://github.com/Deaths-Door/arkley/tree/main/arkley_describe"
homepage = "https://github.com/Deaths-Door/arkley"
license = "MIT OR Apache-2.0"