[package]
name = "arkley_numerics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arkley_traits = { path = "../arkley_traits" }
arkley_describe = { path = "../arkley_describe" , optional = true }

[features]
describe = ["dep:arkley_describe"]