[package]
name = "arkley_numerics"
version.workspace = true
edition.workspace = true
readme.workspace = true
authors.workspace = true
description = "This module provides various number representations and calculations that represent several structs and enums that represent common mathematical numbers such as fractions, standard form, and decimals,"
documentation = "https://docs.rs/arkley_numerics"
repository = "https://github.com/Deaths-Door/arkley/tree/main/arkley_numerics"
homepage.workspace = true
license.workspace = true

[dependencies]
arkley_traits.workspace = true