[package]
name = "arkley_traits"
edition.workspace = true
readme.workspace = true
version.workspace = true
authors = ["Aarav Shah <aaravaditya51@gmail.com>"]
description = "This crate provides several traits for common mathematical operations"
documentation = "https://docs.rs/arkley_traits"
repository = "https://github.com/Deaths-Door/arkley/tree/main/arkley_traits"
homepage.workspace = true
license.workspace = true